# redact-phi-plugin

./: .mcp.json  README.md  conftest.py  pyproject.toml  settings.json
.claude-plugin/: plugin.json
commands/: redact-status.md
hooks/: hooks.json
scripts/: phi-scanner.py
server/: __init__.py  column_classifier.py  exemption_manager.py  identity_resolver.py  mcp_server.py  policy.py  session_store.py  spreadsheet_handler.py
skills/phi-safe-analysis/: SKILL.md
tests/: test_column_classifier.py  test_exemption_manager.py  test_identity_resolver.py  test_integration.py  test_mcp_tools.py  test_policy.py  test_session_store.py  test_spreadsheet_handler.py
tests/fixtures/: sample_billing.csv  sample_q2_billing.csv
